--- a/RUS-ADO.ipynb
+++ b/RUS-ADO.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set country to ADB country code of country\n",
-    "country = 'RUS'"
+    "country = 'ARM'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,25 +75,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdp_growth_quarterly_codes = {'ngpc': 'GDP growth', \n",
+    "                              'nchc': 'Household consumption',\n",
     "                              'ncpc': 'Private consumption',\n",
     "                              'ncgc': 'Government expenditure',\n",
     "                              'nfbc': 'Gross capital formation',\n",
     "                              'nxnc': 'Net exports'}\n",
     "gdp_growth_quarterly_country = [str(country_codes.haver_code[country]) + item for item in gdp_growth_quarterly_codes.keys()]\n",
-    "gdp_growth_quarterly_indicators = ['h' + item for item in gdp_growth_quarterly_country] \n",
+    "gdp_growth_quarterly_indicators = ['h' + item for item in gdp_growth_quarterly_country] + ['s' + item for item in gdp_growth_quarterly_country]\n",
     "df_gdp_growth_quarterly = Haver.data(gdp_growth_quarterly_indicators, database='emerge', dates=True)\n",
     "if type(df_gdp_growth_quarterly) is not dict:\n",
+    "    df_gdp_growth_quarterly = df_gdp_growth_quarterly[[item for item in df_gdp_growth_quarterly if item.startswith('h')]]\n",
     "    df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
     "    df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
     "elif df_gdp_growth_quarterly['codelists']['codesfound']:\n",
     "    df_gdp_growth_quarterly = Haver.data(df_gdp_growth_quarterly['codelists']['codesfound'], dates=True)\n",
-    "    df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
-    "    df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
+    "    if len([item for item in df_gdp_growth_quarterly if item.startswith('h')]) > 0:\n",
+    "        df_gdp_growth_quarterly = df_gdp_growth_quarterly[[item for item in df_gdp_growth_quarterly if item.startswith('h')]]\n",
+    "        df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
+    "        df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
+    "    else:\n",
+    "        df_gdp_growth_quarterly = (df_gdp_growth_quarterly.pct_change(4, fill_method=None) * 100).round(1).tail(5).dropna()\n",
+    "        df_gdp_growth_quarterly.columns = [gdp_growth_quarterly_codes[item[-4:]] for item in df_gdp_growth_quarterly.columns]\n",
+    "\n",
     "\n",
     "retail_codes = {'trs': 'Retail sales index'}\n",
     "retail_country = [str(country_codes.haver_code[country]) + item for item in retail_codes.keys()]\n",
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +344,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<pandasgui.gui.PandasGui at 0x132028b73a8>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "show(df_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +656,7 @@
     "            change[f'{item}'] = random.choice(['decreased', 'contracted', 'shrank', 'declined', 'plunged'])\n",
     "    \n",
     "    # Create dataframe for top growth rates of GDP components on the demand side\n",
-    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in demand_components]].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
+    "    top_demand_growth_quarterly = df_gdp_growth_quarterly.last('Q')[[item for item in df_gdp_growth_quarterly.columns]].transpose().sort_values(by=df_gdp_growth_quarterly.last('Q').index[0], ascending=False)\n",
     "\n",
     "    p = doc.add_heading(f\"Output {'contracted' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'expanded'} in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} {df_gdp_growth_quarterly.last('2Q').index[-1].year}\", level=1)\n",
     "    p = doc.add_paragraph(f\"Output {'plunged' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] < 0 else 'jumped'} by {abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1])}% year-on-year in Q{df_gdp_growth_quarterly.last('2Q').index[-1].quarter} of {df_gdp_growth_quarterly.last('2Q').index[-1].year}. Growth in overall economic activity {'improved' if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-1] > df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] else 'worsened'} from {'a contraction of ' + str(abs(df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2])) if df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2] < 0 else df_gdp_growth_quarterly['GDP growth'].last('2Q').values[-2]}% in the previous quarter. {top_demand_growth_quarterly.index[0]} {change[top_demand_growth_quarterly.index[0]]} by the biggest margin at {top_demand_growth_quarterly.values.max()}% annual growth.\")\n",
@@ -663,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,22 +817,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'forecast_inf_current'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-5486a3b5cbd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malignment\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mWD_ALIGN_PARAGRAPH\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mJUSTIFY\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdoc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_paragraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Consensus Economics panelists foresee {country_codes.country_name[country]}'s inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# Add a paragraph on Risks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5134\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5135\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5136\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5137\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5138\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'forecast_inf_current'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Add a paragraph on Fiscal policy\n",
     "# p = doc.add_paragraph('Fiscal policy', style='List Number')\n",
@@ -816,7 +838,7 @@
     "p = doc.add_paragraph(f\"On {country_codes[country_codes.index==country].forecast_date[0]}, Consensus Economics panelists project {country_codes.country_name[country]}'s economic growth ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_gdp_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists foresee growth at {country_codes[country_codes.index==country].forecast_gdp_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_gdp_2step[0].round(1)}%, respectively.\")\n",
     "p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY\n",
     "\n",
-    "p = doc.add_paragraph(f\"Consensus Economics panelists foresee {country_codes.country_name[country]}'s inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\")\n",
+    "p = doc.add_paragraph(f\"Meanwhile, Consensus Economics panelists foresee inflation ending in {country_codes[country_codes.index==country].forecast_date[0][-4:]} at {country_codes[country_codes.index==country].forecast_inf_current[0].round(1)}%. In {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 1} and {int(country_codes[country_codes.index==country].forecast_date[0][-4:]) + 2}, the panelists project inflation at {country_codes[country_codes.index==country].forecast_inf_1step[0].round(1)}% and {country_codes[country_codes.index==country].forecast_inf_2step[0].round(1)}%, respectively.\")\n",
     "\n",
     "# Add a paragraph on Risks\n",
     "# p = doc.add_paragraph('Risks', style='List Number')\n",
